# openidconnect-federation

./: Cargo.toml  LICENSE
conformance-suite/: Cargo.toml
src/: lib.rs  main.rs
src/jwt/: jwk.rs  mod.rs
src/models/: errors.rs  mod.rs  transformer.rs  trust_chain.rs  verifiers.rs
src/policy/: mod.rs  operators.rs
test-server/: Cargo.toml  intermediate.json  leaf.json  root.json
test-server/src/: main.rs
test_resources/: figure54_policy1.json  figure58_policy2.json  figure62_policy3.json  figure66_policy4.json  figure67_resolved_metadata.json  figure_11_metadata_policy.json  figure_2_example_entity_statement.json  figure_6_trust_chain.json  sunet.json
