[package]
name = "openidconnect-federation"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
josekit = { git = "https://github.com/ubamrein/josekit-rs.git", default-features = false, features = [
    "rustcrypto",
] }
paste = "1.0.15"
anyhow = "1.0.98"
base64 = "0.22.1"
reqwest = { version = "0.12.22", features = ["blocking"] }
urlencoding = "2.1"
tracing = "0.1.41"

[dev-dependencies]
tracing-subscriber = "0.3.19"
