[package]
name = "openidconnect-federation"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
paste = "1.0.15"
anyhow = "1.0.98"
base64 = "0.22.1"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
urlencoding = "2.1"
tracing = "0.1.41"
itertools = "0.14.0"
petgraph = "0.8.3"
heidi-jwt = { git = "https://github.com/heidiverse/heidi-jwt" }

[dev-dependencies]
tracing-subscriber = "0.3.19"
