[package]
name = "test-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
openidconnect-federation = {path = "../"}
axum = "0.8.8"
serde_json = "1.0.148"
serde = { version = "1.0.228", features = ["derive"] }
heidi-jwt = { git = "https://github.com/heidiverse/heidi-jwt" }
